--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
     <title>Flask veikia</title>
 </head>
 <body>
-<h1>Sveiki! Flask programa veikia!</h1>
+<h1>Sveiki! Flask programaa veikia!</h1>
 </body>
 </html>
