--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flask veikia</title>
+    <title>Flask V2 veikia</title>
 </head>
 <body>
-<h1>Sveiki! Flask programaa veikia!</h1>
+<h1>Sveiki! Flask programa v2 veikia!</h1>
 </body>
 </html>
